--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/reset.css"> 
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <title>Document</title>
+</head>
+<body>
+   <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="" class="navbar-brand">site</a>
+            </div>
+            <div>
+                <div class="row"><ul class="nav navbar-nav">
+                    <li class="active"><a href="">main</a></li>
+                    <li><a href="">about us</a></li>
+                    <li><a href="">call</a></li>
+                </ul>
+            </div>
+        </div>
+   </nav>
+           <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="badge text-bg-danger">
+                        h
+                        </div> 
+                    </div>
+                    <div class="col-md-6" style="background-color: violet;">m</div>
+                </div>
+            </div>
+                <div class="col-md-4" style="background-color: rgb(168, 33, 247);">hi</div>
+            </div>
+           </div> 
+                  
+          
 
+</body>
+</html>
