--- a/index.html
+++ b/index.html
@@ -12,35 +12,54 @@
     <title>Document</title>
 </head>
 <body>
-   <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <a href="" class="navbar-brand">site</a>
-            </div>
-            <div>
-                <div class="row"><ul class="nav navbar-nav">
-                    <li class="active"><a href="">main</a></li>
-                    <li><a href="">about us</a></li>
-                    <li><a href="">call</a></li>
-                </ul>
-            </div>
-        </div>
-   </nav>
-           <div class="container">
-            <div class="row">
-                <div class="col-md-8">
+           <div class="container w-1114">
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="badge text-bg-danger">
-                        h
-                        </div> 
+                    <div class="col-md-5">  
+                        <div class="contant df mauto w-539">
+                            <div class="">
+                                <div class="pb-10"><img class="mini-photo mw mh df br border" src="https://m.media-amazon.com/images/I/41cFYGx8moL._AC_US40_.jpg" alt="photo"></div>
+                                <div class="pb-10"><img class="mini-photo mw mh df br border" src="https://m.media-amazon.com/images/I/61V2O4vbYhL._AC_SX679_.jpg" alt="photo"></div>
+                                <div class="pb-10"><img class="mini-photo mw mh df br border" src="https://m.media-amazon.com/images/I/71pqcLy7LIL._AC_SX522_.jpg" alt="photo"></div> 
+                                <div class="pb-10"><img class="mini-photo mw mh df br border" src="https://m.media-amazon.com/images/I/414qtGnwhJL._AC_US40_.jpg" alt="photo"> </div>
+                                <div class="pb-10"><img class="mini-photo mw mh df br border" src="https://m.media-amazon.com/images/I/41dnLjBe6uL._AC_US40_.jpg" alt="photo"></div>
+                                <div class="pb-10"><img class="mini-photo mw mh df br border" src="https://m.media-amazon.com/images/I/41DJe5HPM+L._AC_US40_.jpg" alt="photo"></div>
+                                <div class="pb-10"><img class="mini-photo mw mh df br border" src="https://m.media-amazon.com/images/I/41zMm36wUGL.SS40_BG85,85,85_BR-120_PKdp-play-icon-overlay__.jpg" alt="photo"></div>
+                            </div>
+                            <div class="">
+                                <!-- <img class="photo maxw maxh mt-50" src="https://m.media-amazon.com/images/I/61V2O4vbYhL._AC_SX679_.jpg" alt="photo"> -->
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-6" style="background-color: violet;">m</div>
-                </div>
+                    <div class="col-md-4">
+                        <div><h1 class="font-size-24 w-245 font-weight-400">Logitech G915 TKL Tenkeyless Lightspeed Wireless RGB Механическая игровая клавиатура, варианты низкопрофильного переключателя, LIGHTSYNC RGB, расширенная поддержка беспроводной связи и Bluetooth — Clicky, черный</h1></div>
+                        <div class="pb-0"><p class="font-size-14 text-dec-none "><a class="color-blue text-dec-none"" href="">Посетите магазин Logitech G Store</a></p></div>
+                        <div class="star df">
+                           <div>
+                                <img class="w-16 h-18" src="img/icons8-star-94.png" alt="icon">
+                                <img class="w-16 h-18" src="img/icons8-star-94.png" alt="icon">
+                                <img class="w-16 h-18" src="img/icons8-star-94.png" alt="icon">
+                                <img class="w-16 h-18" src="img/icons8-star-94.png" alt="icon">
+                                <img class="w-16 h-18" src="img/icons8-star-94.png" alt="icon">
+                           </div>
+                            <div class="jc-end w-253 pl-20"><a class="df text-dec-none color-blue" href="">8775 оценок</a></div>
+                        </div>
+                        <div><a class="text-dec-none color-blue" href=""> 322 ответа на вопрос</a></div>
+                        <div class="df pt-10 border-bottom w-253">
+                            <img class="w-26 h-18" src="https://m.media-amazon.com/images/I/111pigi1ylL.png" alt="icon">
+                            <p><a class="text-dec-none color-green fs-14" href="">Климатическое обязательство дружественно</a></p>
+                        </div>
+                        <div class="df">
+                            <p class="fs-13 pr-5">$ </p>
+                               <p class="fs-28 pr-5"> 158.</p>
+                               <p class="fs-13">88</p>
+                        </div>
+                       <div class="border-bottom w-253 border-bottom"> <p class="color-red"><a class="color-red text-dec-none fs-18" href="">В наличии осталась 1 штука - заказывайте скорее.</a></p></div>
+                    </div>                        
+                    <div class="col-md-3">
+
+                    </div>
+                </div> 
             </div>
-                <div class="col-md-4" style="background-color: rgb(168, 33, 247);">hi</div>
-            </div>
-           </div> 
                   
           
 
